fix math notes links

--- a/Math notes.html
+++ b/Math notes.html
@@ -126,12 +126,12 @@
 <p>Please do contact me if you find typos, want to help improve the notes, want source code, etc. I don’t always post/update the source code but I will if you poke me.</p>
 <p><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a></p>
 <h2 id="number-theory">Number Theory</h2>
-<p>I’ve compiled all my number theory notes in the following open-source <a href="tiny.cc/ntbook">textbook</a> (shortlink: tiny.cc/hlbook). This version does not contain drafts in progress; for that see the github page.</p>
+<p>I’ve compiled all my number theory notes in the following open-source <a href="http://tiny.cc/ntbook">textbook</a> (shortlink: tiny.cc/ntbook). This version does not contain drafts in progress; for that see the github page.</p>
 <p>Source code is available at the dedicated repository <a href="https://github.com/holdenlee/number-theory" class="uri">https://github.com/holdenlee/number-theory</a>. Contributions and corrections are welcome; send me a pull request or email me at holdenlee@alum.mit.edu.</p>
 <p>The number theory notes are made of the following two parts:</p>
 <ul>
-<li>Proof of prime number theorem for arithmetic progressions: <a href="tiny.cc/annt" class="uri">tiny.cc/annt</a></li>
-<li>Algebraic number theory, class field theory, and complex multiplication: <a href="tiny.cc/algnt" class="uri">tiny.cc/algnt</a></li>
+<li>Proof of prime number theorem for arithmetic progressions: <a href="http://tiny.cc/annt">tiny.cc/annt</a></li>
+<li>Algebraic number theory, class field theory, and complex multiplication: <a href="http://tiny.cc/algnt">tiny.cc/algnt</a></li>
 </ul>
 <h2 id="high-school-math">High school math</h2>
 <ul>
@@ -165,7 +165,7 @@
 <ul>
 <li>Algebra 3.5, 2010: I taught the second week at Santa Cruz. Notes below.
 <ul>
-<li><a href="http://holdenlee.github.io/high_school/awesome_math/polynomials.pdf">Polynomials</a> (<a href="http://holdenlee.github.io/high_school/awesome_math/polynomials_solutions.pdf">solutions</a>) (Note that part of these notes appear in lectures 8 and ? in OMC.</li>
+<li><a href="http://holdenlee.github.io/high_school/awesome_math/polynomials.pdf">Polynomials</a> (<a href="http://holdenlee.github.io/high_school/awesome_math/polynomials_solutions.pdf">solutions</a>) (Note that part of these notes appear in lectures 8 and 13 in OMC.)</li>
 <li><a href="http://holdenlee.github.io/high_school/awesome_math/Inequalities.pdf">Inequalities</a>, <a href="http://holdenlee.github.io/high_school/awesome_math/holder-minkowski.pdf">Holder and Minkowski</a>, <a href="http://holdenlee.github.io/high_school/awesome_math/Inequalities%20strategies.pdf">strategies</a></li>
 <li><a href="http://holdenlee.github.io/high_school/awesome_math/functional.pdf">Functional equations</a> (<a href="http://holdenlee.github.io/high_school/awesome_math/functional_solutions.pdf">solutions</a>)</li>
 <li><a href="http://holdenlee.github.io/high_school/awesome_math/exam2-sol.pdf">Week 2 exam</a></li>
@@ -185,9 +185,9 @@
 <ul>
 <li>Lecture 1: <a href="high_school/omc/1-beauty.pdf">The Beauty of Mathematics</a></li>
 <li>Lecture 4: <a href="high_school/omc/cnt.pdf">Combinatorial Number Theory</a></li>
-<li>Lecture 8: <a href="high_school/omc/poly1.pdf">Polynomials, Part 1</a></li>
-<li>Lecture 11: <a href="high_school/omc/13-polynum.pdf">Complex Numbers</a></li>
-<li>Lecture 13: <a href="high_school/omc/18-genfunc.pdf">Polynomials, Part 2</a> (Polynomials and number theory)</li>
+<li>Lecture 8: <a href="high_school/omc/8-poly1.pdf">Polynomials, Part 1</a></li>
+<li>Lecture 11: <a href="high_school/omc/11-complex.pdf">Complex Numbers</a></li>
+<li>Lecture 13: <a href="high_school/omc/13-polynum.pdf">Polynomials, Part 2</a> (Polynomials and number theory)</li>
 <li>Lecture 18: <a href="high_school/omc/18-genfunc.pdf">Generating functions</a></li>
 <li>Lecture 21 (with Yoni Miller): <a href="high_school/omc/21-pie.pdf">Principle of Inclusion and Exclusion</a></li>
 <li>Lecture 23: <a href="high_school/omc/23-rearrange.pdf">Rearrangement inequality</a></li>
