--- a/Math notes.html
+++ b/Math notes.html
@@ -137,7 +137,23 @@
 <ul>
 <li>Gliya geometry curriculum:
 <ul>
-<li>I wrote <a href="http://gliyanet.com/#!/nexus/math/Geometry">lessons</a> on introduction to geometry, angles, congruent triangles, similar triangles, constructions, and the angle bisector theorem. (Sorry, the link is currently not available.)</li>
+<li>I wrote lessons on introduction to geometry, angles, congruent triangles, similar triangles, constructions, and the angle bisector theorem. Some sample sections (called “cells”) follow; please contact me for more. <!-- [lessons](http://gliyanet.com/#!/nexus/math/Geometry) (Sorry, the link is currently not available.) -->
+<ul>
+<li>Introduction: <a href="high_school/gliya/1_1_intro_foundations.pdf">The Foundations of Geometry</a></li>
+<li>Angles: <a href="high_school/gliya/2_0_angles_roadmap.pdf">roadmap</a></li>
+<li>Congruent triangles
+<ul>
+<li><a href="high_school/gliya/3_0_congruent_triangles_Road_Map.pdf">roadmap</a></li>
+<li><a href="high_school/gliya/3_1_What_is_Congruence.pdf">1 What is Congruence?</a></li>
+</ul></li>
+<li>Similar triangles
+<ul>
+<li><a href="high_school/gliya/4_0.pdf">roadmap</a></li>
+<li><a href="high_school/gliya/4_1_similar_intro.pdf">1 What is similarity?</a></li>
+<li><a href="high_school/gliya/4_3_similar_thales.pdf">3 Parallel lines cut similar triangles</a></li>
+<li><a href="high_school/gliya/4_10_similar_summary.pdf">10 Summary</a></li>
+</ul></li>
+</ul></li>
 </ul></li>
 <li>High school math club materials: Materials I used for ERHS math club, 2007-2009.
 <ul>
@@ -185,7 +201,7 @@
 <ul>
 <li>Lecture 1: <a href="high_school/omc/1-beauty.pdf">The Beauty of Mathematics</a></li>
 <li>Lecture 4: <a href="high_school/omc/cnt.pdf">Combinatorial Number Theory</a></li>
-<li>Lecture 8: <a href="high_school/omc/8-poly1.pdf">Polynomials, Part 1</a></li>
+<li>Lecture 8: <a href="high_school/omc/8-poly1.pdf">Polynomials, Part 1</a>, <a href="high_school/omc/poly1-soln.pdf">solutions</a></li>
 <li>Lecture 11: <a href="high_school/omc/11-complex.pdf">Complex Numbers</a></li>
 <li>Lecture 13: <a href="high_school/omc/13-polynum.pdf">Polynomials, Part 2</a> (Polynomials and number theory)</li>
 <li>Lecture 18: <a href="high_school/omc/18-genfunc.pdf">Generating functions</a></li>
