--- a/Research.html
+++ b/Research.html
@@ -117,7 +117,11 @@
   <div class="toc"> <ul>
  <li><a href="#research-interests">Research interests</a></li>
  <li><a href="#papers">Papers</a><ul>
- <li><a href="#machine-learning">Machine learning</a></li>
+ <li><a href="#machine-learning">Machine learning</a><ul>
+ <li><a href="#bayesian-inference">Bayesian inference</a></li>
+ <li><a href="#reinforcement-learning-and-control-theory">Reinforcement learning and control theory</a></li>
+ <li><a href="#neural-networks">Neural networks</a></li>
+ </ul></li>
  <li><a href="#complexity-theory">Complexity theory</a></li>
  <li><a href="#number-theory">Number theory</a></li>
  </ul></li>
@@ -138,21 +142,33 @@
 <h2 id="papers">Papers</h2>
 <p>The publication list is available as <a href="https://www.dropbox.com/s/7fas5lckj99sqx0/publication_list.pdf?dl=0">pdf</a>.</p>
 <h3 id="machine-learning">Machine learning</h3>
+<h4 id="bayesian-inference">Bayesian inference</h4>
 <ul>
 <li><p><strong>Online Sampling from Log-Concave Distributions</strong></p>
 <p>with Oren Mangoubi and Nisheeth Vishnoi. In submission. <a href="https://drive.google.com/file/d/1qKv-vGBDMDzWxTvi4znEm5iuMQ2sjCP_/view">pdf</a></p></li>
-<li><p><strong>Spectral Filtering for General Linear Dynamical Systems</strong></p>
-<p>with Elad Hazan, Karan Singh, Cyril Zhang, and Yi Zhang. [<a href="https://arxiv.org/abs/1802.03981">arxiv</a>, <a href="https://arxiv.org/pdf/1802.03981">pdf</a>]</p></li>
-<li><p><strong>Towards Provable Control for Unknown Linear Dynamical Systems.</strong></p>
-<p>with Sanjeev Arora, Elad Hazan, Karan Singh, Cyril Zhang, and Yi Zhang. ICLR workshop 2018. [<a href="https://openreview.net/forum?id=HJGuXK1vM">ICLR page</a>, <a href="https://openreview.net/pdf?id=HJGuXK1vM">pdf</a>]</p></li>
 <li><p><strong>Beyond Log-concavity: Provable Guarantees for Sampling Multi-modal Distributions using Simulated Tempering Langevin Monte Carlo.</strong> <a href="Simulated%20tempering%20Langevin%20Monte%20Carlo.html">webpage</a></p>
 <p>with Rong Ge and Andrej Risteski.</p>
 <ul>
 <li>NeurIPS 2018. [<a href="https://arxiv.org/abs/1812.00793">arXiv</a>, <a href="https://arxiv.org/abs/1812.00793.pdf">pdf</a>]</li>
 <li>NIPS AABI Workshop 2017. [<a href="https://arxiv.org/abs/1710.02736">arXiv</a>, <a href="https://arxiv.org/pdf/1710.02736.pdf">pdf</a>]</li>
 </ul></li>
+</ul>
+<h4 id="reinforcement-learning-and-control-theory">Reinforcement learning and control theory</h4>
+<ul>
+<li><pre><code>**Statistical Guarantees for Learning an Autoregressive Filter**</code></pre>
+<p>with Cyril Zhang. In submission.</p></li>
+<li><p><strong>Spectral Filtering for General Linear Dynamical Systems</strong></p>
+<p>with Elad Hazan, Karan Singh, Cyril Zhang, and Yi Zhang. [<a href="https://arxiv.org/abs/1802.03981">arxiv</a>, <a href="https://arxiv.org/pdf/1802.03981">pdf</a>]</p>
+<p>NeurIPS 2018 (oral).</p></li>
+<li><p><strong>Towards Provable Control for Unknown Linear Dynamical Systems.</strong></p>
+<p>with Sanjeev Arora, Elad Hazan, Karan Singh, Cyril Zhang, and Yi Zhang. [<a href="https://openreview.net/forum?id=HJGuXK1vM">ICLR page</a>, <a href="https://openreview.net/pdf?id=HJGuXK1vM">pdf</a>]</p>
+<p>ICLR workshop 2018.</p></li>
+</ul>
+<h4 id="neural-networks">Neural networks</h4>
+<ul>
 <li><p><strong>On the Ability of Neural Nets to Express Distributions.</strong></p>
-<p>with Rong Ge, Tengyu Ma, Andrej Risteski, and Sanjeev Arora. COLT 2017. [<a href="https://arxiv.org/pdf/1702.07028.pdf">arXiv</a>, <a href="http://proceedings.mlr.press/v65/lee17a/lee17a.pdf">PMLR 65:1271-1296</a>, <a href="http://tiny.cc/hlcolt17">webpage</a>]</p></li>
+<p>with Rong Ge, Tengyu Ma, Andrej Risteski, and Sanjeev Arora. [<a href="https://arxiv.org/pdf/1702.07028.pdf">arXiv</a>, <a href="http://proceedings.mlr.press/v65/lee17a/lee17a.pdf">PMLR 65:1271-1296</a>, <a href="http://tiny.cc/hlcolt17">webpage</a>]</p>
+<p>COLT 2017.</p></li>
 </ul>
 <h3 id="complexity-theory">Complexity theory</h3>
 <ul>
