--- a/Research.html
+++ b/Research.html
@@ -155,7 +155,7 @@
 </ul>
 <h4 id="reinforcement-learning-and-control-theory">Reinforcement learning and control theory</h4>
 <ul>
-<li><pre><code>**Statistical Guarantees for Learning an Autoregressive Filter**</code></pre>
+<li><p><strong>Statistical Guarantees for Learning an Autoregressive Filter</strong></p>
 <p>with Cyril Zhang. In submission.</p></li>
 <li><p><strong>Spectral Filtering for General Linear Dynamical Systems</strong></p>
 <p>with Elad Hazan, Karan Singh, Cyril Zhang, and Yi Zhang. [<a href="https://arxiv.org/abs/1802.03981">arxiv</a>, <a href="https://arxiv.org/pdf/1802.03981">pdf</a>]</p>
