--- a/Simulated tempering Langevin Monte Carlo.html
+++ b/Simulated tempering Langevin Monte Carlo.html
@@ -157,6 +157,7 @@
 <li><a href="https://arxiv.org/abs/1812.00793">arXiv</a>, <a href="https://arxiv.org/abs/1812.00793.pdf">pdf</a>.
 <ul>
 <li>A previous version of the paper, with a more complicated proof and weaker result, appeared in NIPS AABI workshop 2017, and is on arxiv <a href="https://arxiv.org/abs/1710.02736">here</a>.</li>
+<li>There are some errors in the current version which we we will fix in the revision. For now, see the corrections <a href="https://www.dropbox.com/s/hdkwieajtum5dvn/corrections-public.pdf?dl=0">here</a>.</li>
 </ul></li>
 <li><a href="https://www.dropbox.com/s/44udkqyd2r95qzk/slides_IAS.pdf?dl=0">Slides</a>, <a href="https://dynalist.io/d/wW7edPHuU41y1qxWAI0fL__c#z=c2y7iGMb-rjqoGupMLQ1DAWe">transcript</a></li>
 <li><a href="https://www.dropbox.com/s/jt4jol7hs1lbcoq/poster_nips.pdf?dl=0">Poster</a></li>
