--- a/index.html
+++ b/index.html
@@ -112,15 +112,15 @@
 </center>
 <br />
 <center>
-<p>Holden Lee<br /> <a href="https://www.math.princeton.edu/">Mathematics Department</a><br /> <a href="http://www.princeton.edu">Princeton University</a><br /> holdenl@princeton.edu<br /></p>
+<p>Holden Lee<br /> <a href="https://www.math.princeton.edu/">Mathematics Department</a><br /> <a href="http://www.princeton.edu">Princeton University</a><br /> holdenl@math.princeton.edu<br /></p>
 </center>
-<p>I am a Ph.D. student advised by Sanjeev Arora, focusing on machine learning from a theoretical perspective. Check out my <strong><a href="Research.html">research</a></strong> and <strong><a href="http://holdenlee.github.io/blog">blog</a></strong>. My CV is <a href="https://www.dropbox.com/s/jndub09i2d5txst/holden_lee.pdf?dl=0">here</a>.</p>
-<p>Here are links to <a href="http://mltheory.cs.princeton.edu/">ML theory at Princeton</a> and <a href="http://unsupervised.cs.princeton.edu/">Sanjeev Arora’s research group</a>.</p>
+<p>I received my Ph.D. from Princeton, where I was advised by Sanjeev Arora. I focus on machine learning from a theoretical perspective. Check out my <strong><a href="Research.html">research</a></strong> and <strong><a href="http://holdenlee.github.io/blog">blog</a></strong>. My CV is <a href="https://www.dropbox.com/s/jndub09i2d5txst/holden_lee.pdf?dl=0">here</a>. Here are links to <a href="http://mltheory.cs.princeton.edu/">ML theory at Princeton</a> and <a href="http://unsupervised.cs.princeton.edu/">Sanjeev Arora’s research group</a>.</p>
+<p>I will be at the <a href="http://math.ias.edu">IAS</a> in Fall 2019 to participate in the special year on Theoretical Machine Learning. In Spring 2020, I will be starting as a Phillip Griffiths Research Assistant Professor in <a href="https://math.duke.edu/">Mathematics at Duke University</a>.</p>
 <h2 id="basic-info">Basic Info</h2>
 <ul>
 <li>Education:
 <ul>
-<li>(Current) <a href="https://www.math.princeton.edu">Princeton University</a>, Ph.D. program in math</li>
+<li><a href="https://www.math.princeton.edu">Princeton University</a>, Ph.D. in Math, 2019</li>
 <li><a href="http://www.cam.ac.uk/">University of Cambridge</a>, MAST in Pure Math, 2014</li>
 <li><a href="http://www.mit.edu">Massachusetts Institute of Technology</a>, B. Sc. Math, 2013</li>
 </ul></li>
