--- a/Research.html
+++ b/Research.html
@@ -167,7 +167,7 @@
 <h4 id="neural-networks">Neural networks</h4>
 <ul>
 <li><p><strong>Explaining Landscape Connectivity of Low-cost Solutions for Multilayer Nets.</strong></p>
-with Rohith Kuditipudi, Xiang Wang, Yi Zhang, Zhiyuan Li, Wei Hu, Rong Ge, and Sanjeev Arora. In submission.</li>
+<p>with Rohith Kuditipudi, Xiang Wang, Yi Zhang, Zhiyuan Li, Wei Hu, Rong Ge, and Sanjeev Arora. In submission.</p></li>
 <li><p><strong>On the Ability of Neural Nets to Express Distributions.</strong></p>
 <p>with Rong Ge, Tengyu Ma, Andrej Risteski, and Sanjeev Arora. [<a href="https://arxiv.org/abs/1702.07028">arXiv</a>, <a href="https://arxiv.org/pdf/1702.07028.pdf">pdf</a>, <a href="http://proceedings.mlr.press/v65/lee17a/lee17a.pdf">PMLR 65:1271-1296</a>, <a href="http://tiny.cc/hlcolt17">webpage</a>]</p>
 <p>COLT 2017.</p></li>
