--- a/The heart is a lonely hunter.html
+++ b/The heart is a lonely hunter.html
@@ -105,7 +105,7 @@
           
 	</p>
       
-       <p>Tags: <a href="./tags/none.html">none</a></p> 
+       <p>Tags: <a href="./tags/book.html">book</a>, <a href="./tags/love.html">love</a>, <a href="./tags/loss.html">loss</a>, <a href="./tags/loneliness.html">loneliness</a>, <a href="./tags/music.html">music</a>, <a href="./tags/work.html">work</a>, <a href="./tags/tiredness.html">tiredness</a></p> 
        <p>Parent: <a href="./Books.html">Books</a></p> 
 	   <p>Children: </p> 
     </div>
