--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 </center>
 <p>I received my Ph.D. from Princeton, where I was advised by Sanjeev Arora. I focus on machine learning from a theoretical perspective. Check out my <strong><a href="Research.html">research</a></strong> and <strong><a href="http://holdenlee.github.io/blog">blog</a></strong>. My CV is <a href="https://www.dropbox.com/s/jndub09i2d5txst/holden_lee.pdf?dl=0">here</a>. Here are links to <a href="http://mltheory.cs.princeton.edu/">ML theory at Princeton</a> and <a href="http://unsupervised.cs.princeton.edu/">Sanjeev Arora’s research group</a>.</p>
 <p>I will be at the <a href="http://math.ias.edu">IAS</a> in Fall 2019 to participate in the special year on Theoretical Machine Learning. In Spring 2020, I will be starting as a Phillip Griffiths Research Assistant Professor in <a href="https://math.duke.edu/">Mathematics at Duke University</a>.</p>
+<p><em>Please do not contact me about jobs in finance.</em></p>
 <h2 id="basic-info">Basic Info</h2>
 <ul>
 <li>Education:
