--- a/About.html
+++ b/About.html
@@ -123,8 +123,8 @@
 
   <div class="blog-main">
     <h2 id="about-me">About me</h2>
-<p>I’m Holden Lee, a graduate student in math at Princeton. I started in Fall 2014 and plan to graduate in 2019.</p>
-<p>My main interest is in machine learning and theoretical computer science. Other academic interests/hobbies include:</p>
+<p>I’m Holden Lee, a postdoc visiting the Instutite of Advanced Study for Fall 2019, and starting at Duke in Spring 2020.</p>
+<p>My main interest is theoretical computer science, in particular machine learning. Other academic interests/hobbies include:</p>
 <ul>
 <li>Number theory</li>
 <li>Functional programming</li>
