--- a/Research.html
+++ b/Research.html
@@ -145,7 +145,8 @@
 <h4 id="bayesian-inference">Bayesian inference</h4>
 <ul>
 <li><p><strong>Online Sampling from Log-Concave Distributions</strong></p>
-<p>with Oren Mangoubi and Nisheeth Vishnoi. In submission. [<a href="https://arxiv.org/abs/1902.08179">arXiv</a>, <a href="https://arxiv.org/pdf/1902.08179">pdf</a>]</p></li>
+<p>with Oren Mangoubi and Nisheeth Vishnoi.</p>
+<p>NeurIPS 2019. [<a href="https://arxiv.org/abs/1902.08179">arXiv</a>, <a href="https://arxiv.org/pdf/1902.08179">pdf</a>]</p></li>
 <li><p><strong>Beyond Log-concavity: Provable Guarantees for Sampling Multi-modal Distributions using Simulated Tempering Langevin Monte Carlo.</strong> <a href="Simulated%20tempering%20Langevin%20Monte%20Carlo.html">webpage</a></p>
 <p>with Rong Ge and Andrej Risteski.</p>
 <ul>
@@ -156,7 +157,7 @@
 <h4 id="reinforcement-learning-and-control-theory">Reinforcement learning and control theory</h4>
 <ul>
 <li><p><strong>Statistical Guarantees for Learning an Autoregressive Filter</strong></p>
-<p>with Cyril Zhang. In submission. [<a href="https://arxiv.org/abs/1905.09897">arxiv</a>, <a href="https://arxiv.org/pdf/1905.09897.pdf">pdf</a>]</p></li>
+<p>with Cyril Zhang. Preprint. [<a href="https://arxiv.org/abs/1905.09897">arxiv</a>, <a href="https://arxiv.org/pdf/1905.09897.pdf">pdf</a>]</p></li>
 <li><p><strong>Spectral Filtering for General Linear Dynamical Systems</strong></p>
 <p>with Elad Hazan, Karan Singh, Cyril Zhang, and Yi Zhang. [<a href="https://arxiv.org/abs/1802.03981">arxiv</a>, <a href="https://arxiv.org/pdf/1802.03981.pdf">pdf</a>]</p>
 <p>NeurIPS 2018 (oral).</p></li>
@@ -167,7 +168,8 @@
 <h4 id="neural-networks">Neural networks</h4>
 <ul>
 <li><p><strong>Explaining Landscape Connectivity of Low-cost Solutions for Multilayer Nets.</strong></p>
-<p>with Rohith Kuditipudi, Xiang Wang, Yi Zhang, Zhiyuan Li, Wei Hu, Rong Ge, and Sanjeev Arora. In submission.</p></li>
+<p>with Rohith Kuditipudi, Xiang Wang, Yi Zhang, Zhiyuan Li, Wei Hu, Rong Ge, and Sanjeev Arora.</p>
+<p>NeurIPS 2019. [<a href="https://arxiv.org/abs/1906.06247">arXiv</a>, <a href="https://arxiv.org/pdf/1906.06247">pdf</a>]</p></li>
 <li><p><strong>On the Ability of Neural Nets to Express Distributions.</strong></p>
 <p>with Rong Ge, Tengyu Ma, Andrej Risteski, and Sanjeev Arora. [<a href="https://arxiv.org/abs/1702.07028">arXiv</a>, <a href="https://arxiv.org/pdf/1702.07028.pdf">pdf</a>, <a href="http://proceedings.mlr.press/v65/lee17a/lee17a.pdf">PMLR 65:1271-1296</a>, <a href="http://tiny.cc/hlcolt17">webpage</a>]</p>
 <p>COLT 2017.</p></li>
