--- a/Research.html
+++ b/Research.html
@@ -146,7 +146,7 @@
 <ul>
 <li><p><strong>Online Sampling from Log-Concave Distributions</strong></p>
 <p>with Oren Mangoubi and Nisheeth Vishnoi.</p>
-<p>NeurIPS 2019. [<a href="https://arxiv.org/abs/1902.08179">arXiv</a>, <a href="https://arxiv.org/pdf/1902.08179">pdf</a>]</p></li>
+<p>NeurIPS 2019. [<a href="https://arxiv.org/abs/1902.08179">arXiv</a>, <a href="https://arxiv.org/pdf/1902.08179">pdf</a>] [webpage](Online Sampling from Log-Concave Distributions.html)</p></li>
 <li><p><strong>Beyond Log-concavity: Provable Guarantees for Sampling Multi-modal Distributions using Simulated Tempering Langevin Monte Carlo.</strong> <a href="Simulated%20tempering%20Langevin%20Monte%20Carlo.html">webpage</a></p>
 <p>with Rong Ge and Andrej Risteski.</p>
 <ul>
