--- a/Research.html
+++ b/Research.html
@@ -144,6 +144,9 @@
 <h3 id="machine-learning">Machine learning</h3>
 <h4 id="bayesian-inference">Bayesian inference</h4>
 <ul>
+<li><p><strong>Estimating Normalizing Constants for Log-Concave Distributions: Algorithms and Lower Bounds</strong></p>
+<p>with Rong Ge and Jianfeng Lu.</p>
+<p><em>In submission.</em> [<a href="https://arxiv.org/abs/1911.03043">arXiv</a>, <a href="https://arxiv.org/pdf/1911.03043">pdf</a>]</p></li>
 <li><p><strong>Online Sampling from Log-Concave Distributions</strong></p>
 <p>with Oren Mangoubi and Nisheeth Vishnoi.</p>
 <p>NeurIPS 2019. [<a href="https://arxiv.org/abs/1902.08179">arXiv</a>, <a href="https://arxiv.org/pdf/1902.08179">pdf</a>] [webpage](Online Sampling from Log-Concave Distributions.html)</p></li>
