--- a/Online Sampling from Log-Concave Distributions.html
+++ b/Online Sampling from Log-Concave Distributions.html
@@ -124,7 +124,7 @@
     <h2 id="basic-information">Basic information</h2>
 <p>This page is about the following paper:</p>
 <blockquote>
-<p>H. Lee, O. Mangoubi, &amp; N. Vishnoi. (2019). <strong>Online Sampling from Log-Concave Distributions.</strong> NeurIPS 2019. arXiv preprint arXiv:1812.00793.</p>
+<p>H. Lee, O. Mangoubi, &amp; N. Vishnoi. (2019). <strong>Online Sampling from Log-Concave Distributions.</strong> NeurIPS 2019. arXiv:1812.00793.</p>
 </blockquote>
 <p>Shortlink: <a href="http://tiny.cc/lmv19">tiny.cc/lmv19</a></p>
 <ul>
