--- a/Research.html
+++ b/Research.html
@@ -118,7 +118,7 @@
  <li><a href="#research-interests">Research interests</a></li>
  <li><a href="#papers">Papers</a><ul>
  <li><a href="#machine-learning">Machine learning</a><ul>
- <li><a href="#bayesian-inference">Bayesian inference</a></li>
+ <li><a href="#bayesian-inference-sampling-algorithms">Bayesian inference (Sampling algorithms)</a></li>
  <li><a href="#reinforcement-learning-and-control-theory">Reinforcement learning and control theory</a></li>
  <li><a href="#neural-networks">Neural networks</a></li>
  </ul></li>
@@ -134,7 +134,7 @@
 <p>Although machine learning (and deep learning in particular) has made great advances in recent years, our mathematical understanding of it is shallow. Learning problems can be highly nonconvex, yet tractable in practice. What hidden structure do these problems have, and how can we design algorithms to take advantage of it?</p>
 <p>Current interests include:</p>
 <ul>
-<li><strong>Probabilistic modeling (Bayesian inference)</strong>: How to design provable algorithms for learning probability distributions and sampling from them? How can we improve classical algorithms like Markov Chain Monte Carlo, or test the quality of the samples?</li>
+<li><strong>Bayesian inference/Probabilistic modeling</strong>: How to design provable algorithms for learning probability distributions and sampling from them? How can we improve classical algorithms like Markov Chain Monte Carlo, or test the quality of the samples?</li>
 <li><strong>Control theory and reinforcement learning</strong>: It is a well-studied problem how to find the optimal control for known linear dynamical system. However, reinforcement learning deals with learning how to act unknown, combinatorially complex systems; algorithms are heuristic and slow. How to bridge this gap?</li>
 <li><strong>Neural networks</strong>: Neural networks tackle highly nonconvex problems but do very well in practice. Why? What kind of algorithmic improvements can we come up with by understanding their theoretical foundations more deeply?</li>
 <li><strong>Natural language understanding</strong>: Language is a fundamental part of human intelligence and a big frontier for machine learning. How do we create machines that can understand “grammar” and “semantics”?</li>
@@ -142,16 +142,17 @@
 <h2 id="papers">Papers</h2>
 <p>The publication list is available as <a href="https://www.dropbox.com/s/7fas5lckj99sqx0/publication_list.pdf?dl=0">pdf</a>.</p>
 <h3 id="machine-learning">Machine learning</h3>
-<h4 id="bayesian-inference">Bayesian inference</h4>
+<p>[A] denotes alphabetical order of authors.</p>
+<h4 id="bayesian-inference-sampling-algorithms">Bayesian inference (Sampling algorithms)</h4>
 <ul>
 <li><p><strong>Estimating Normalizing Constants for Log-Concave Distributions: Algorithms and Lower Bounds</strong></p>
-<p>with Rong Ge and Jianfeng Lu.</p>
-<p><em>In submission.</em> [<a href="https://arxiv.org/abs/1911.03043">arXiv</a>, <a href="https://arxiv.org/pdf/1911.03043">pdf</a>]</p></li>
+<p>[A] Rong Ge, <strong>Holden Lee</strong>, and Jianfeng Lu.</p>
+<p>STOC 2020. [<a href="https://arxiv.org/abs/1911.03043">arXiv</a>, <a href="https://arxiv.org/pdf/1911.03043">pdf</a>]</p></li>
 <li><p><strong>Online Sampling from Log-Concave Distributions</strong></p>
-<p>with Oren Mangoubi and Nisheeth Vishnoi.</p>
+<p>[A] <strong>Holden Lee</strong>, Oren Mangoubi, and Nisheeth Vishnoi.</p>
 <p>NeurIPS 2019. [<a href="https://arxiv.org/abs/1902.08179">arXiv</a>, <a href="https://arxiv.org/pdf/1902.08179">pdf</a>] [webpage](Online Sampling from Log-Concave Distributions.html)</p></li>
 <li><p><strong>Beyond Log-concavity: Provable Guarantees for Sampling Multi-modal Distributions using Simulated Tempering Langevin Monte Carlo.</strong> <a href="Simulated%20tempering%20Langevin%20Monte%20Carlo.html">webpage</a></p>
-<p>with Rong Ge and Andrej Risteski.</p>
+<p>[A] Rong Ge, <strong>Holden Lee</strong>, and Andrej Risteski.</p>
 <ul>
 <li>NeurIPS 2018. [<a href="https://arxiv.org/abs/1812.00793">arXiv</a>, <a href="https://arxiv.org/pdf/1812.00793.pdf">pdf</a>]</li>
 <li>NIPS AABI Workshop 2017. [<a href="https://arxiv.org/abs/1710.02736">arXiv</a>, <a href="https://arxiv.org/pdf/1710.02736.pdf">pdf</a>]</li>
@@ -159,34 +160,37 @@
 </ul>
 <h4 id="reinforcement-learning-and-control-theory">Reinforcement learning and control theory</h4>
 <ul>
+<li><p><strong>No-Regret Prediction in Marginally Stable Systems</strong></p>
+<p>[A] Udaya Ghai, <strong>Holden Lee</strong>, Karan Singh, Cyril Zhang, and Yi Zhang. [<a href="https://arxiv.org/abs/2002.02064">arxiv</a>, <a href="https://arxiv.org/pdf/2002.02064.pdf">pdf</a>]</p></li>
 <li><p><strong>Statistical Guarantees for Learning an Autoregressive Filter</strong></p>
-<p>with Cyril Zhang. [<a href="https://arxiv.org/abs/1905.09897">arxiv</a>, <a href="https://arxiv.org/pdf/1905.09897.pdf">pdf</a>]</p>
+<p>[A] <strong>Holden Lee</strong> and Cyril Zhang. [<a href="https://arxiv.org/abs/1905.09897">arxiv</a>, <a href="https://arxiv.org/pdf/1905.09897.pdf">pdf</a>]</p>
 <p>ALT 2020.</p></li>
 <li><p><strong>Spectral Filtering for General Linear Dynamical Systems</strong></p>
-<p>with Elad Hazan, Karan Singh, Cyril Zhang, and Yi Zhang. [<a href="https://arxiv.org/abs/1802.03981">arxiv</a>, <a href="https://arxiv.org/pdf/1802.03981.pdf">pdf</a>]</p>
+<p>[A] Elad Hazan, Holden Lee, Karan Singh, Cyril Zhang, and Yi Zhang. [<a href="https://arxiv.org/abs/1802.03981">arxiv</a>, <a href="https://arxiv.org/pdf/1802.03981.pdf">pdf</a>]</p>
 <p>NeurIPS 2018 (oral).</p></li>
 <li><p><strong>Towards Provable Control for Unknown Linear Dynamical Systems.</strong></p>
-<p>with Sanjeev Arora, Elad Hazan, Karan Singh, Cyril Zhang, and Yi Zhang. [<a href="https://openreview.net/forum?id=HJGuXK1vM">ICLR page</a>, <a href="https://openreview.net/pdf?id=HJGuXK1vM">pdf</a>]</p>
+<p>[A] Sanjeev Arora, Elad Hazan, <strong>Holden Lee</strong>, Karan Singh, Cyril Zhang, and Yi Zhang. [<a href="https://openreview.net/forum?id=HJGuXK1vM">ICLR page</a>, <a href="https://openreview.net/pdf?id=HJGuXK1vM">pdf</a>]</p>
 <p>ICLR workshop 2018.</p></li>
 </ul>
 <h4 id="neural-networks">Neural networks</h4>
 <ul>
 <li><p><strong>Explaining Landscape Connectivity of Low-cost Solutions for Multilayer Nets.</strong></p>
-<p>with Rohith Kuditipudi, Xiang Wang, Yi Zhang, Zhiyuan Li, Wei Hu, Rong Ge, and Sanjeev Arora.</p>
+<p>Rohith Kuditipudi, Xiang Wang, <strong>Holden Lee</strong>, Yi Zhang, Zhiyuan Li, Wei Hu, Rong Ge, and Sanjeev Arora.</p>
 <p>NeurIPS 2019. [<a href="https://arxiv.org/abs/1906.06247">arXiv</a>, <a href="https://arxiv.org/pdf/1906.06247">pdf</a>]</p></li>
 <li><p><strong>On the Ability of Neural Nets to Express Distributions.</strong></p>
-<p>with Rong Ge, Tengyu Ma, Andrej Risteski, and Sanjeev Arora. [<a href="https://arxiv.org/abs/1702.07028">arXiv</a>, <a href="https://arxiv.org/pdf/1702.07028.pdf">pdf</a>, <a href="http://proceedings.mlr.press/v65/lee17a/lee17a.pdf">PMLR 65:1271-1296</a>, <a href="http://tiny.cc/hlcolt17">webpage</a>]</p>
+<p><strong>Holden Lee</strong>, Rong Ge, Tengyu Ma, Andrej Risteski, and Sanjeev Arora. [<a href="https://arxiv.org/abs/1702.07028">arXiv</a>, <a href="https://arxiv.org/pdf/1702.07028.pdf">pdf</a>, <a href="http://proceedings.mlr.press/v65/lee17a/lee17a.pdf">PMLR 65:1271-1296</a>, <a href="http://tiny.cc/hlcolt17">webpage</a>]</p>
 <p>COLT 2017.</p></li>
 </ul>
 <h3 id="complexity-theory">Complexity theory</h3>
 <ul>
 <li><p><strong>Quadratic polynomials of small modulus cannot represent OR.</strong></p>
+<p><strong>Holden Lee</strong></p>
 <p>Unpublished, 2015. [<a href="http://arxiv.org/abs/1509.08896">arXiv</a>, <a href="http://arxiv.org/pdf/1509.08896.pdf">pdf</a>]</p></li>
 </ul>
 <h3 id="number-theory">Number theory</h3>
 <ul>
 <li><p><strong>l-adic properties of partition functions.</strong></p>
-<p>with Eva Belmont, Alexandra Musat, and Sarah Trebat-Leder.</p>
+<p>[A] Eva Belmont, <strong>Holden Lee</strong>, Alexandra Musat, and Sarah Trebat-Leder.</p>
 <p><a href="http://link.springer.com/article/10.1007/s00605-013-0586-y">Monatshefte für Mathematik, 173(1), 1-34</a>, 2014. [<a href="https://arxiv.org/abs/1510.01202">arXiv</a>, <a href="https://arxiv.org/pdf/1510.01202.pdf">pdf</a>, <a href="https://www.dropbox.com/s/81413cszqabcwcx/MIT%20presentation.pdf?dl=0">presentation</a>, <a href="l-adic%20properties%20of%20partition%20functions.html">webpage</a>]</p></li>
 </ul>
 
