--- a/Research.html
+++ b/Research.html
@@ -118,7 +118,7 @@
  <li><a href="#research-interests">Research interests</a></li>
  <li><a href="#papers">Papers</a><ul>
  <li><a href="#machine-learning">Machine learning</a><ul>
- <li><a href="#bayesian-inference-sampling-algorithms">Bayesian inference (Sampling algorithms)</a></li>
+ <li><a href="#bayesian-inference-and-sampling-algorithms">Bayesian inference and sampling algorithms</a></li>
  <li><a href="#reinforcement-learning-and-control-theory">Reinforcement learning and control theory</a></li>
  <li><a href="#neural-networks">Neural networks</a></li>
  </ul></li>
@@ -143,14 +143,14 @@
 <p>The publication list is available as <a href="https://www.dropbox.com/s/7fas5lckj99sqx0/publication_list.pdf?dl=0">pdf</a>.</p>
 <p>[A] denotes alphabetical order of authors.</p>
 <h3 id="machine-learning">Machine learning</h3>
-<h4 id="bayesian-inference-sampling-algorithms">Bayesian inference (Sampling algorithms)</h4>
+<h4 id="bayesian-inference-and-sampling-algorithms">Bayesian inference and sampling algorithms</h4>
 <ul>
 <li><p><strong>Estimating Normalizing Constants for Log-Concave Distributions: Algorithms and Lower Bounds</strong></p>
 <p>[A] Rong Ge, <strong>Holden Lee</strong>, and Jianfeng Lu.</p>
-<p>STOC 2020. [<a href="https://arxiv.org/abs/1911.03043">arXiv</a>, <a href="https://arxiv.org/pdf/1911.03043">pdf</a>]</p></li>
+<p>STOC 2020. [<a href="https://arxiv.org/abs/1911.03043">arXiv</a>, <a href="https://arxiv.org/pdf/1911.03043">pdf</a>, <a href="https://dl.acm.org/citation.cfm?id=3384289">STOC 2020:579–586</a>, <a href="https://www.dropbox.com/s/da2mz50a76k9suz/NormalizingConstant_Presentation.pdf?dl=0">slides</a>, <a href="https://www.youtube.com/watch?v=TqdtxcYaw3I&amp;list=PLn0nrSd4xjjadfcMd5xvmJ_GNSLDi1ATn">video</a>]</p></li>
 <li><p><strong>Online Sampling from Log-Concave Distributions</strong></p>
 <p>[A] <strong>Holden Lee</strong>, Oren Mangoubi, and Nisheeth Vishnoi.</p>
-<p>NeurIPS 2019. [<a href="https://arxiv.org/abs/1902.08179">arXiv</a>, <a href="https://arxiv.org/pdf/1902.08179">pdf</a>] [webpage](Online Sampling from Log-Concave Distributions.html)</p></li>
+<p>NeurIPS 2019. [<a href="https://arxiv.org/abs/1902.08179">arXiv</a>, <a href="https://arxiv.org/pdf/1902.08179">pdf</a>, <a href="Online%20Sampling%20from%20Log-Concave%20Distributions.html">webpage</a>]</p></li>
 <li><p><strong>Beyond Log-concavity: Provable Guarantees for Sampling Multi-modal Distributions using Simulated Tempering Langevin Monte Carlo.</strong> <a href="Simulated%20tempering%20Langevin%20Monte%20Carlo.html">webpage</a></p>
 <p>[A] Rong Ge, <strong>Holden Lee</strong>, and Andrej Risteski.</p>
 <ul>
@@ -161,8 +161,8 @@
 <h4 id="reinforcement-learning-and-control-theory">Reinforcement learning and control theory</h4>
 <ul>
 <li><p><strong>No-Regret Prediction in Marginally Stable Systems</strong></p>
-<p>[A] Udaya Ghai, <strong>Holden Lee</strong>, Karan Singh, Cyril Zhang, and Yi Zhang. [<a href="https://arxiv.org/abs/2002.02064">arxiv</a>, <a href="https://arxiv.org/pdf/2002.02064.pdf">pdf</a>]</p>
-<p>In submission.</p></li>
+<p>[A] Udaya Ghai, <strong>Holden Lee</strong>, Karan Singh, Cyril Zhang, and Yi Zhang. [<a href="https://arxiv.org/abs/2002.02064">arxiv</a>, <a href="https://arxiv.org/pdf/2002.02064.pdf">pdf</a>, <a href="https://www.dropbox.com/s/74idgddlkbosiil/slides-colt.pdf?dl=0">slides</a>, <a href="https://www.dropbox.com/s/rbmr4rk3vixahoc/slides-colt-short.pdf?dl=0">summary slide</a>]</p>
+<p>COLT 2020.</p></li>
 <li><p><strong>Statistical Guarantees for Learning an Autoregressive Filter</strong></p>
 <p>[A] <strong>Holden Lee</strong> and Cyril Zhang. [<a href="https://arxiv.org/abs/1905.09897">arxiv</a>, <a href="https://arxiv.org/pdf/1905.09897.pdf">pdf</a>]</p>
 <p>ALT 2020.</p></li>
