--- a/Math notes.html
+++ b/Math notes.html
@@ -137,9 +137,8 @@
 <ul>
 <li>Gliya geometry curriculum:
 <ul>
-<li>I wrote lessons on introduction to geometry, angles, congruent triangles, similar triangles, constructions, and the angle bisector theorem. Some sample sections (called “cells”) follow; please contact me for more. <!-- [lessons](http://gliyanet.com/#!/nexus/math/Geometry) (Sorry, the link is currently not available.) -->
+<li>I wrote lessons on introduction to geometry, angles, congruent triangles, similar triangles, constructions, and the angle bisector theorem. Some sample sections (called “cells”) follow. <!-- [lessons](http://gliyanet.com/#!/nexus/math/Geometry) (Sorry, the link is currently not available.) -->
 <ul>
-<li>Introduction: <a href="high_school/gliya/1_1_intro_foundations.pdf">The Foundations of Geometry</a></li>
 <li>Angles: <a href="high_school/gliya/2_0_angles_roadmap.pdf">roadmap</a></li>
 <li>Congruent triangles
 <ul>
@@ -150,7 +149,6 @@
 <ul>
 <li><a href="high_school/gliya/4_0.pdf">roadmap</a></li>
 <li><a href="high_school/gliya/4_1_similar_intro.pdf">1 What is similarity?</a></li>
-<li><a href="high_school/gliya/4_3_similar_thales.pdf">3 Parallel lines cut similar triangles</a></li>
 <li><a href="high_school/gliya/4_10_similar_summary.pdf">10 Summary</a></li>
 </ul></li>
 </ul></li>
