--- a/Research.html
+++ b/Research.html
@@ -165,7 +165,7 @@
 <ul>
 <li><p><strong>Improved rates for identification of partially observed linear dynamical systems</strong></p>
 <p><strong>Holden Lee</strong>.</p>
-<p>In submission. [<a href>arXiv</a>, <a href>pdf</a>]</p></li>
+<p>In submission. [<a href="https://arxiv.org/abs/2011.10006">arXiv</a>, <a href="https://arxiv.org/pdf/2011.10006.pdf">pdf</a>]</p></li>
 <li><p><strong>No-Regret Prediction in Marginally Stable Systems</strong></p>
 <p>[A] Udaya Ghai, <strong>Holden Lee</strong>, Karan Singh, Cyril Zhang, and Yi Zhang. [<a href="https://arxiv.org/abs/2002.02064">arxiv</a>, <a href="https://arxiv.org/pdf/2002.02064.pdf">pdf</a>, <a href="https://www.dropbox.com/s/74idgddlkbosiil/slides-colt.pdf?dl=0">slides</a>, <a href="https://www.dropbox.com/s/rbmr4rk3vixahoc/slides-colt-short.pdf?dl=0">summary slide</a>, <a href="https://www.colt2020.org/virtual/papers/paper_34.html">videos</a>]</p>
 <p>COLT 2020.</p></li>
