--- a/Research.html
+++ b/Research.html
@@ -132,7 +132,7 @@
 <p>Although machine learning (and deep learning in particular) has made great advances in recent years, our mathematical understanding of it is shallow. Learning problems can be highly nonconvex, yet tractable in practice. What hidden structure do these problems have, and how can we design algorithms to take advantage of it?</p>
 <p>Current interests include:</p>
 <ul>
-<li><strong>Bayesian inference/Probabilistic modeling</strong>, with a focus on <strong>sampling (MCMC) algorithms</strong>: How to design provable algorithms for learning probability distributions and sampling from them? <!--How can we improve classical algorithms like Markov Chain Monte Carlo, or test the quality of the samples?--></li>
+<li><strong>Probabilistic methods in machine learning</strong>, with a focus on <strong>sampling (MCMC) algorithms</strong>: How to design provable algorithms for learning probability distributions and sampling from them? <!--How can we improve classical algorithms like Markov Chain Monte Carlo, or test the quality of the samples?--></li>
 <li><strong>Control theory and reinforcement learning</strong>, with a focus on <strong>learning dynamical systems</strong>: It is a well-studied problem how to find the optimal control for known linear dynamical system. However, reinforcement learning deals with learning how to act unknown, combinatorially complex systems; algorithms are heuristic and slow. How to bridge this gap?</li>
 <li><strong>Neural networks</strong>: Neural networks tackle highly nonconvex problems but do very well in practice. Why? What kind of algorithmic improvements can we come up with by understanding their theoretical foundations more deeply?</li>
 <li><strong>Natural language understanding</strong>: Language is a fundamental part of human intelligence and a big frontier for machine learning. How do we create machines that can understand “grammar” and “semantics”?</li>
@@ -142,9 +142,12 @@
 <p>[A] denotes alphabetical order of authors.</p>
 <h3 id="algorithms-for-sampling-and-counting">Algorithms for sampling and counting</h3>
 <ul>
+<li><p><strong>Sampling Approximately Low-Rank Ising Models: MCMC meets Variational Methods</strong></p>
+<p>[A] Frederic Koehler, <strong>Holden Lee</strong>, and Andrej Risteski.</p>
+<p>In submission. [<a href="https://arxiv.org/abs/2202.08907">arXiv</a>, <a href="https://arxiv.org/pdf/2202.08907">pdf</a>]</p></li>
 <li><p><strong>Approximation algorithms for the random-field Ising model</strong></p>
-<p>[A] Tyler Helmuth, <strong>Holden Lee</strong>, Will Perkins, Mohan Ravichandran, Qiang Wu.</p>
-<p>Preprint. [<a href="https://arxiv.org/abs/2108.11889">arXiv</a>, <a href="https://arxiv.org/pdf/2108.11889">pdf</a>]</p></li>
+<p>[A] Tyler Helmuth, <strong>Holden Lee</strong>, Will Perkins, Mohan Ravichandran, and Qiang Wu.</p>
+<p>In submission. [<a href="https://arxiv.org/abs/2108.11889">arXiv</a>, <a href="https://arxiv.org/pdf/2108.11889">pdf</a>]</p></li>
 <li><p><strong>Efficient sampling from the Bingham distribution</strong></p>
 <p>[A] Rong Ge, <strong>Holden Lee</strong>, Jianfeng Lu, and Andrej Risteski.</p>
 <p>ALT 2021. [<a href="https://arxiv.org/abs/2010.00137">arXiv</a>, <a href="https://arxiv.org/pdf/2010.00137">pdf</a>, <a href="https://www.youtube.com/watch?v=6dkS-Hdg8cs">video</a>]</p></li>
@@ -166,19 +169,19 @@
 <ul>
 <li><p><strong>Improved rates for identification of partially observed linear dynamical systems</strong></p>
 <p><strong>Holden Lee</strong>.</p>
-<p>In submission. [<a href="https://arxiv.org/abs/2011.10006">arXiv</a>, <a href="https://arxiv.org/pdf/2011.10006">pdf</a>]</p></li>
+<p>ALT 2022. [<a href="https://arxiv.org/abs/2011.10006">arXiv</a>, <a href="https://arxiv.org/pdf/2011.10006">pdf</a>]</p></li>
 <li><p><strong>No-Regret Prediction in Marginally Stable Systems</strong></p>
-<p>[A] Udaya Ghai, <strong>Holden Lee</strong>, Karan Singh, Cyril Zhang, and Yi Zhang. [<a href="https://arxiv.org/abs/2002.02064">arxiv</a>, <a href="https://arxiv.org/pdf/2002.02064.pdf">pdf</a>, <a href="https://www.dropbox.com/s/74idgddlkbosiil/slides-colt.pdf?dl=0">slides</a>, <a href="https://www.dropbox.com/s/rbmr4rk3vixahoc/slides-colt-short.pdf?dl=0">summary slide</a>, <a href="https://www.colt2020.org/virtual/papers/paper_34.html">videos</a>]</p>
-<p>COLT 2020.</p></li>
+<p>[A] Udaya Ghai, <strong>Holden Lee</strong>, Karan Singh, Cyril Zhang, and Yi Zhang.</p>
+<p>COLT 2020. [<a href="https://arxiv.org/abs/2002.02064">arxiv</a>, <a href="https://arxiv.org/pdf/2002.02064.pdf">pdf</a>, <a href="https://www.dropbox.com/s/74idgddlkbosiil/slides-colt.pdf?dl=0">slides</a>, <a href="https://www.dropbox.com/s/rbmr4rk3vixahoc/slides-colt-short.pdf?dl=0">summary slide</a>, <a href="https://www.colt2020.org/virtual/papers/paper_34.html">videos</a>]</p></li>
 <li><p><strong>Statistical Guarantees for Learning an Autoregressive Filter</strong></p>
-<p>[A] <strong>Holden Lee</strong> and Cyril Zhang. [<a href="https://arxiv.org/abs/1905.09897">arxiv</a>, <a href="https://arxiv.org/pdf/1905.09897.pdf">pdf</a>]</p>
-<p>ALT 2020.</p></li>
+<p>[A] <strong>Holden Lee</strong> and Cyril Zhang.</p>
+<p>ALT 2020. [<a href="https://arxiv.org/abs/1905.09897">arxiv</a>, <a href="https://arxiv.org/pdf/1905.09897.pdf">pdf</a>]</p></li>
 <li><p><strong>Spectral Filtering for General Linear Dynamical Systems</strong></p>
-<p>[A] Elad Hazan, <strong>Holden Lee</strong>, Karan Singh, Cyril Zhang, and Yi Zhang. [<a href="https://arxiv.org/abs/1802.03981">arxiv</a>, <a href="https://arxiv.org/pdf/1802.03981.pdf">pdf</a>]</p>
-<p>NeurIPS 2018 (oral).</p></li>
+<p>[A] Elad Hazan, <strong>Holden Lee</strong>, Karan Singh, Cyril Zhang, and Yi Zhang.</p>
+<p>NeurIPS 2018 (oral). [<a href="https://arxiv.org/abs/1802.03981">arxiv</a>, <a href="https://arxiv.org/pdf/1802.03981.pdf">pdf</a>]</p></li>
 <li><p><strong>Towards Provable Control for Unknown Linear Dynamical Systems.</strong></p>
-<p>[A] Sanjeev Arora, Elad Hazan, <strong>Holden Lee</strong>, Karan Singh, Cyril Zhang, and Yi Zhang. [<a href="https://openreview.net/forum?id=HJGuXK1vM">ICLR page</a>, <a href="https://openreview.net/pdf?id=HJGuXK1vM">pdf</a>]</p>
-<p>ICLR workshop 2018.</p></li>
+<p>[A] Sanjeev Arora, Elad Hazan, <strong>Holden Lee</strong>, Karan Singh, Cyril Zhang, and Yi Zhang.</p>
+<p>ICLR workshop 2018. [<a href="https://openreview.net/forum?id=HJGuXK1vM">ICLR page</a>, <a href="https://openreview.net/pdf?id=HJGuXK1vM">pdf</a>]</p></li>
 </ul>
 <h3 id="neural-networks">Neural networks</h3>
 <ul>
@@ -189,8 +192,8 @@
 <p>Rohith Kuditipudi, Xiang Wang, <strong>Holden Lee</strong>, Yi Zhang, Zhiyuan Li, Wei Hu, Rong Ge, and Sanjeev Arora.</p>
 <p>NeurIPS 2019. [<a href="https://arxiv.org/abs/1906.06247">arXiv</a>, <a href="https://arxiv.org/pdf/1906.06247">pdf</a>]</p></li>
 <li><p><strong>On the Ability of Neural Nets to Express Distributions.</strong></p>
-<p><strong>Holden Lee</strong>, Rong Ge, Tengyu Ma, Andrej Risteski, and Sanjeev Arora. [<a href="https://arxiv.org/abs/1702.07028">arXiv</a>, <a href="https://arxiv.org/pdf/1702.07028.pdf">pdf</a>, <a href="http://proceedings.mlr.press/v65/lee17a/lee17a.pdf">PMLR 65:1271-1296</a>, <a href="http://tiny.cc/hlcolt17">webpage</a>]</p>
-<p>COLT 2017.</p></li>
+<p><strong>Holden Lee</strong>, Rong Ge, Tengyu Ma, Andrej Risteski, and Sanjeev Arora.</p>
+<p>COLT 2017. [<a href="https://arxiv.org/abs/1702.07028">arXiv</a>, <a href="https://arxiv.org/pdf/1702.07028.pdf">pdf</a>, <a href="http://proceedings.mlr.press/v65/lee17a/lee17a.pdf">PMLR 65:1271-1296</a>, <a href="http://tiny.cc/hlcolt17">webpage</a>]</p></li>
 </ul>
 <h3 id="complexity-theory">Complexity theory</h3>
 <ul>
