move to JHU, add LLT22 and FGL22

--- a/Research.html
+++ b/Research.html
@@ -142,9 +142,12 @@
 <p>[A] denotes alphabetical order of authors.</p>
 <h3 id="algorithms-for-sampling-and-counting">Algorithms for sampling and counting</h3>
 <ul>
+<li><p><strong>Convergence for score-based generative modeling with polynomial complexity</strong></p>
+<p>[A] <strong>Holden Lee</strong>, Jianfeng Lu, and Yixin Tan.</p>
+<p>In submission.</p></li>
 <li><p><strong>Sampling Approximately Low-Rank Ising Models: MCMC meets Variational Methods</strong></p>
 <p>[A] Frederic Koehler, <strong>Holden Lee</strong>, and Andrej Risteski.</p>
-<p>In submission. [<a href="https://arxiv.org/abs/2202.08907">arXiv</a>, <a href="https://arxiv.org/pdf/2202.08907">pdf</a>]</p></li>
+<p>COLT 2022. [<a href="https://arxiv.org/abs/2202.08907">arXiv</a>, <a href="https://arxiv.org/pdf/2202.08907">pdf</a>]</p></li>
 <li><p><strong>Approximation algorithms for the random-field Ising model</strong></p>
 <p>[A] Tyler Helmuth, <strong>Holden Lee</strong>, Will Perkins, Mohan Ravichandran, and Qiang Wu.</p>
 <p>In submission. [<a href="https://arxiv.org/abs/2108.11889">arXiv</a>, <a href="https://arxiv.org/pdf/2108.11889">pdf</a>]</p></li>
@@ -167,6 +170,9 @@
 </ul>
 <h3 id="reinforcement-learning-and-control-theory">Reinforcement learning and control theory</h3>
 <ul>
+<li><p><strong>Extracting Latent State Representations with Linear Dynamics from Rich Observations</strong></p>
+<p>Abraham Frandsen, Rong Ge, and <strong>Holden Lee</strong>.</p>
+<p><a href="https://proceedings.mlr.press/v162/frandsen22a.html">ICML 2022</a>.</p></li>
 <li><p><strong>Improved rates for identification of partially observed linear dynamical systems</strong></p>
 <p><strong>Holden Lee</strong>.</p>
 <p>ALT 2022. [<a href="https://arxiv.org/abs/2011.10006">arXiv</a>, <a href="https://arxiv.org/pdf/2011.10006">pdf</a>]</p></li>
