--- a/index.html
+++ b/index.html
@@ -112,15 +112,25 @@
 </center>
 <br />
 <center>
-<p>Holden Lee<br /> <a href="https://www.math.duke.edu/">Mathematics Department</a><br /> <a href="http://www.duke.edu">Duke University</a><br /> holden.lee@duke.edu<br /></p>
+<p>Holden Lee<br /> <a href="https://ams.jhu.edu/">Applied Mathematics and Statistics Department</a><br /> <a href="http://www.jhu.edu">Johns Hopkins University</a><br /> hlee283@jhu.edu<br /></p>
 </center>
-<p>I am a Phillip Griffiths Research Assistant Professor in Mathematics at Duke University, supervised by <a href="https://services.math.duke.edu/~jianfeng/">Jianfeng Lu</a> and <a href="https://users.cs.duke.edu/~rongge/">Rong Ge</a>.</p>
-<p>My research is in <strong>machine learning</strong> and <strong>applied probability</strong>. I received my Ph.D. from Princeton, where I was advised by Sanjeev Arora. Check out my <strong><a href="Research.html">research</a></strong> and <strong><a href="http://holdenlee.github.io/blog">blog</a></strong>. My CV is <a href="https://www.dropbox.com/s/jndub09i2d5txst/holden_lee.pdf?dl=0">here</a>.</p>
-<p>I am a fellow at the <a href="https://simons.berkeley.edu/">Simons Institute</a> at UC Berkeley for Fall 2021.</p>
-<p>In Spring 2021 I taught Math 230 (Probability) and in Spring 2020 I taught <a href="https://services.math.duke.edu/~holee/math361-2020/index.html">Math 361S (Numerical Analysis)</a>. In Spring 2022 I will teach Math 340 (Advanced Introduction to Probability). <!--Here are links to [ML theory at Princeton](http://mltheory.cs.princeton.edu/) and
-[Sanjeev Arora's research group](http://unsupervised.cs.princeton.edu/).--></p>
+<p>I am an assistant professor in applied mathematics and statistics at Johns Hopkins University. My research is in <strong>machine learning</strong> and <strong>applied probability</strong>. Check out my <strong><a href="Research.html">research</a></strong> and <strong><a href="http://holdenlee.github.io/blog">blog</a></strong>. My CV is <a href="https://www.dropbox.com/s/jndub09i2d5txst/holden_lee.pdf?dl=0">here</a>.</p>
+<p>Timeline:</p>
+<ul>
+<li>2020-2022: Phillips Griffiths Research Assistant Professor in mathematics at Duke, supervised by <a href="https://services.math.duke.edu/~jianfeng/">Jianfeng Lu</a> and <a href="https://users.cs.duke.edu/~rongge/">Rong Ge</a>.</li>
+<li>Fall 2021: I was a fellow at the <a href="https://simons.berkeley.edu/">Simons Institute</a> at UC Berkeley.</li>
+<li>2019: I received my Ph.D. from Princeton, where I was advised by Sanjeev Arora.</li>
+</ul>
+<!-- Phillip Griffiths Research Assistant Professor in Mathematics-->
+<p>Teaching:</p>
+<ul>
+<li>Fall 2022: 621 Probability Theory I.</li>
+<li>Spring 2022: Math 340 (Advanced Introduction to Probability).</li>
+<li>Spring 2021: Math 230 (Probability).</li>
+<li>Spring 2020: <a href="https://services.math.duke.edu/~holee/math361-2020/index.html">Math 361S (Numerical Analysis)</a> <!--Here are links to [ML theory at Princeton](http://mltheory.cs.princeton.edu/) and
+[Sanjeev Arora's research group](http://unsupervised.cs.princeton.edu/).--></li>
+</ul>
 <!-- I will be at the [IAS](http://math.ias.edu) in Fall 2019 to participate in the special year on Theoretical Machine Learning. In Spring 2020, I will be starting as a Phillip Griffiths Research Assistant Professor in [Mathematics at Duke University](https://math.duke.edu/).-->
-<p><em>Please do not contact me about jobs in finance.</em></p>
 <h2 id="basic-info">Basic Info</h2>
 <ul>
 <li>Education:
